Fix map height to 90% of the visible viewport

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+}
+
+.App {
   text-align: center;
 }
 
